input parameter file FELsource_params.txt

--- a/fast2h5_new_s2e.ipynb
+++ b/fast2h5_new_s2e.ipynb
@@ -20,23 +20,27 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#!S2E\n",
-      "%pylab inline\n",
+      "isIpynb = False\n",
+      "isIpynb = True # !S2E, comment this line for python script!\n",
+      "\n",
+      "if isIpynb:\n",
+      "    %pylab inline\n",
+      "    \n",
       "#Importing necessary modules:\n",
       "import sys\n",
       "import os\n",
       "import errno\n",
       "\n",
-      "#S2Esys.path.insert(0,'/data/S2E/packages/WPG')\n",
-      "#!S2E\n",
-      "sys.path.insert(0,'../..')\n",
+      "if not isIpynb:\n",
+      "    S2Esys.path.insert(0,'/data/S2E/packages/WPG')\n",
+      "else:\n",
+      "    sys.path.insert(0,'../..')\n",
       "\n",
       "import shutil\n",
       "import uuid\n",
@@ -46,30 +50,28 @@
       "#Import base wavefront class\n",
       "from wpg import Wavefront\n",
       "\n",
-      "#LP\n",
+      "#\n",
+      "# if working with long pulse (LP)\n",
+      "#\n",
       "isLP = True\n",
       "fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
       "nharm = 1\n",
       "\n",
-      "doPrint = False     # switch on/off debug printing\n",
+      "#\n",
+      "# switch on/off debug printing\n",
+      "#\n",
+      "doPrint = False     \n",
+      "\n",
+      "#\n",
       "# switch on/off copying results into FELsource/prop_in_XXX.h5 \n",
-      "# switch on/off copying results into FELsource/prop_in_XXX.h5 \n",
-      "#S2EdoCopyRes = True    \n",
-      "#!S2E\n",
-      "doCopyRes = False\n"
+      "#\n",
+      "doCopyRes = True    \n",
+      "if isIpynb: \n",
+      "    doCopyRes = False"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Populating the interactive namespace from numpy and matplotlib\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -89,8 +91,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -103,8 +104,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -120,8 +120,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -137,8 +136,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -161,8 +159,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -191,8 +188,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -215,8 +211,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -250,8 +245,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -277,8 +271,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 11
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -344,8 +337,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -397,8 +389,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 13
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -500,8 +491,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -556,8 +546,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -585,8 +574,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -635,6 +623,7 @@
       "    #set_oname_2014(namg,'PZ'+str(nharm)+'_',ifb,0)+'0.RES'\n",
       "    pz_data = numpy.loadtxt(fel_data_path+pz_data_file)\n",
       "    wf_struct['history/parent/detail/misc']={\n",
+      "                                             'nzc':(nzc,'f'),\n",
       "                                             'FAST2XY_DAT':(f_in.readlines(),'s'),\n",
       "                                             'temporal_struct':(e_data,'f'),\n",
       "                                             'spot_size':(nf_data,'f'),\n",
@@ -652,8 +641,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 17
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -666,7 +654,6 @@
       "    parser = OptionParser()\n",
       "    parser.add_option(\"-o\", \"--output-dir\",          dest=\"out_dir\", help=\"Output directory\", )\n",
       "    parser.add_option(\"-f\", \"--file-id\",             dest=\"f_id\",     help=\"ID of the first of output files: FELsource_out_<ID+{0..JMAX-1}>\", )\n",
-      "    parser.add_option(\"-i\", \"--input-parameter-file\",dest=\"in_fast2xydat\", help=\"Input fast2xy parameter file\", )\n",
       "    parser.add_option(\"-j\", \"--jmax\",                dest=\"jmax\", help=\"how many output pulses should be provided (1 by default)\", )\n",
       "    parser.add_option(\"-t\", \"--time-start\",          dest=\"trd1\", help=\"Start time value for reading the pulse, fs\")\n",
       "    parser.add_option(\"-q\", \"--time-end\",            dest=\"trd2\", help=\"End time value for reading the pulse, fs\")\n",
@@ -715,9 +702,11 @@
       "\n",
       "    #copy-paste from else block of the cell below\n",
       "    out_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    #!S2Ethepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/' \n",
       "    #@\n",
-      "    thepath ='/data/S2E/data/FELsource/'\n",
+      "    if isIpynb:\n",
+      "        thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/FELsource/' \n",
+      "    else:\n",
+      "        thepath ='/data/S2E/data/FELsource/'\n",
       "    \n",
       "    mkdir_p(out_dir)\n",
       "    os.chdir(thepath)\n",
@@ -747,13 +736,17 @@
       "        os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
       "        \n",
       "        shutil.copy(in_fname+'.h5', os.path.join(work_dir,out_fname+'.h5'))\n",
-      "        os.system('rm '+tmp_dir+'/*.*')\n",
+      "        shutil.rmtree(tmp_dir)\n",
       "    \n",
       "        if doCopyRes:\n",
-      "            print 'The result hdf5 file  '+out_fname+'.h5 will be copied to '\n",
+      "            print 'The result hdf5 file  '+out_fname+'.h5 will be copied/moved to '\n",
       "            print out_dir+'/'+ prop_in_fname+'.h5'\n",
-      "            shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
-      "                        os.path.join(out_dir,prop_in_fname+'.h5'))\n",
+      "            if jmax == 1:\n",
+      "                shutil.move(os.path.join(work_dir,out_fname+'.h5'), \n",
+      "                            os.path.join(out_dir,prop_in_fname+'.h5'))\n",
+      "            else:\n",
+      "                shutil.copy(os.path.join(work_dir,out_fname+'.h5'), \n",
+      "                            os.path.join(out_dir,prop_in_fname+'.h5'))\n",
       "        else:\n",
       "            print out_fname, prop_in_fname\n",
       "            print '... done'\n",
@@ -762,32 +755,35 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 25
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "#$\n",
-      "if False:\n",
+      "if not isIpynb:\n",
       "    if __name__ == '__main__':\n",
       "        main()\n",
       "else:\n",
       "    # typical command line parameters:\n",
       "    # fast2xy_new.py -i'PPROC-FAST2XY_2013_LP.DAT' --time-start=3. --skip-nslices=8 --zc-point-num=33 --jmax=2\n",
-      "    in_fast2xydat='PPROC-FAST2XY_2013_LP.DAT';f_id=2;trd1=3.;nskip=8;nzc=25;jmax=2\n",
+      "#    in_fast2xydat='PPROC-FAST2XY_2013_LP.DAT';f_id=2;trd1=3.;nskip=8;nzc=25;jmax=2\n",
+      "    in_fast2xydat='FELsource_params.txt';f_id=2;trd1=3.;nskip=8;nzc=25;jmax=1\n",
       "    #!S2E\n",
-      "    out_dir='/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource'\n",
-      "    \n",
+      "    if isIpynb:\n",
+      "        out_dir = '/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource'\n",
+      "        thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/FELsource/' \n",
+      "    else:\n",
+      "        out_dir = './' # never used\n",
+      "        thepath ='./'\n",
+      "\n",
+      "    mkdir_p(out_dir)\n",
+      "\n",
       "    out_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    #!S2E\n",
-      "    thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/bp140523/' \n",
-      "    #S2Ethepath ='/data/S2E/data/FELsource/'\n",
       "    \n",
       "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
       "    \n",
-      "    mkdir_p(out_dir)\n",
       "    os.chdir(thepath)\n",
       "\n",
       "    for idx in range(0,jmax):\n",
@@ -802,8 +798,9 @@
       "        if doPrint: print 'The result hdf5 file will be saved in \\n'+ work_dir+'/'\n",
       "        mkdir_p(tmp_dir)\n",
       "        if doPrint: print 'All temporary files will be saved in \\n'+ tmp_dir+'/'\n",
-      "        shutil.copy(os.path.join(thepath,in_fast2xydat), tmp_dir+'/'+out_fast2xydat)\n",
-      "        shutil.copy(os.path.join(thepath,fast2xyexe), tmp_dir+'/')\n",
+      "        shutil.copy(os.path.join(thepath,in_fast2xydat), \n",
+      "                    os.path.join(tmp_dir,out_fast2xydat))\n",
+      "        shutil.copy(os.path.join(thepath,fast2xyexe), tmp_dir)\n",
       "    \n",
       "        os.chdir(tmp_dir)\n",
       "        in_fname=convert_fast2h5(fel_data_path,fast2xyexe,out_fast2xydat,namg,ifb,nzc)\n",
@@ -814,14 +811,18 @@
       "        os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
       "        \n",
       "        shutil.copy(in_fname+'.h5', os.path.join(work_dir,out_fname+'.h5'))\n",
-      "        os.system('rm '+tmp_dir+'/*.*')\n",
+      "        shutil.rmtree(tmp_dir)\n",
       "    \n",
       "        if doCopyRes:\n",
-      "            print 'The result hdf5 file  '+out_fname+'.h5 will be copied to '\n",
+      "            print 'The result hdf5 file  '+out_fname+'.h5 will be copied/moved to '\n",
       "            #print out_dir+'/'+ set_FELout_name('prop_in',trd1)+'.h5'\n",
       "            print out_dir+'/'+ prop_in_fname+'.h5'\n",
-      "            shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
-      "                        os.path.join(out_dir,prop_in_fname+'.h5'))\n",
+      "            if jmax == 1:\n",
+      "                shutil.move(os.path.join(work_dir,out_fname+'.h5'), \n",
+      "                            os.path.join(out_dir,prop_in_fname+'.h5'))\n",
+      "            else:\n",
+      "                shutil.copy(os.path.join(work_dir,out_fname+'.h5'), \n",
+      "                            os.path.join(out_dir,prop_in_fname+'.h5'))\n",
       "        else:\n",
       "            print out_fname, prop_in_fname\n",
       "            print '... done'\n",
@@ -830,42 +831,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Reading FEL data from:SASE1_5keV_14GeV_LP_FXY1_1001025.RES ...\n",
-        "SASE1_5keV_14GeV_LP_FXY1_1001025_003"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " FELsource_out_000002\n",
-        "... done\n",
-        "Reading FEL data from:SASE1_5keV_14GeV_LP_FXY1_1001025.RES ..."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "SASE1_5keV_14GeV_LP_FXY1_1001025_012"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " FELsource_out_000003\n",
-        "... done\n"
-       ]
-      }
-     ],
-     "prompt_number": 27
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -875,8 +841,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 20
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -886,8 +851,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 21
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -897,8 +861,27 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 22
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print doCopyRes"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "jmax"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -906,8 +889,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 22
+     "outputs": []
     }
    ],
    "metadata": {}
