--- a/fast2h5_new_s2e.ipynb
+++ b/fast2h5_new_s2e.ipynb
@@ -38,7 +38,7 @@
       "import errno\n",
       "\n",
       "if not isIpynb:\n",
-      "    S2Esys.path.insert(0,'/data/S2E/packages/WPG')\n",
+      "    sys.path.insert(0,'/data/S2E/packages/WPG')\n",
       "else:\n",
       "    sys.path.insert(0,'../..')\n",
       "\n",
@@ -664,12 +664,7 @@
       "    parser.add_option(\"-p\", \"--prefix\",              dest=\"namg\", help=\"Prefix of FEL data files\")\n",
       "\n",
       "    (options, args) = parser.parse_args()\n",
-      "    \n",
-      "    if not options.in_fast2xydat:   # if filename is not given\n",
-      "        parser.error('Input parameter filename is not specified')\n",
-      "    else:\n",
-      "        in_fast2xydat=options.in_fast2xydat\n",
-      "   \n",
+      "       \n",
       "    if not options.out_dir:   # if output directory not given\n",
       "        parser.error('Output directory is not specified')\n",
       "    else:\n",
@@ -700,6 +695,7 @@
       "    else:\n",
       "        namg=options.namg\n",
       "\n",
+      "    in_fast2xydat='FELsource_params.txt'\n",
       "    #copy-paste from else block of the cell below\n",
       "    out_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
       "    #@\n",
