generating html reports for S2E

--- a/report_h5FELsource.ipynb
+++ b/report_h5FELsource.ipynb
@@ -12,9 +12,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "isIpynb = False\n",
-      "isIpynb = True # !S2E, comment this line for python script!\n",
-      "\n",
+      "isS2E = True   # if running at S2E server\n",
+      "isIpynb = True # if ipython notebook, in python script should be false \n",
+      "isLP = True # if True, the pulse is a chunk of a longe pulse\n",
+      "# 1 [J] = J2eV [eV]\n",
+      "J2eV = 6.24150934e18"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "if isIpynb:\n",
       "    %pylab inline"
      ],
@@ -31,12 +42,12 @@
       "import numpy \n",
       "import os\n",
       "\n",
-      "if isIpynb:\n",
-      "    sys.path.insert(0,'../..')\n",
-      "else:\n",
+      "if isS2E:\n",
       "    sys.path.insert(0,'/data/S2E/packages/WPG')\n",
+      "else:\n",
+      "    sys.path.insert(0,'../..')\n",
       "\n",
-      "from wpg import Wavefront\n"
+      "from wpg import Wavefront"
      ],
      "language": "python",
      "metadata": {},
@@ -46,24 +57,41 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "isS2E = False\n",
-      "isS2E = True # if general file name for S2E\n",
-      "out_dir = '/data/S2E/data/simulation_test/FELsource'\n",
-      "out_dir ='/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource'\n",
       "if isS2E:\n",
+      "    work_dir = '/data/S2E/modules/FELsource'# where ipython is running\n",
+      "    out_dir = '/data/S2E/data/simulation_test/FELsource' # output data directory\n",
       "    datapath = out_dir\n",
-      "    h5_file_name = 'FELsource_out_000003'\n",
-      "else: \n",
+      "    h5_file_name = 'FELsource_out_000001'\n",
+      "else:\n",
+      "    work_dir = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/FELsource'\n",
+      "    out_dir ='/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource'\n",
       "    _NZC_ = '025';_TRD1_='003'\n",
       "    _NAMG_='SASE1_5keV_14GeV_LP_1001'\n",
       "    datapath =_NAMG_+_NZC_\n",
       "    h5_file_name = 'SASE1_5keV_14GeV_LP_FXY1_1001'+_NZC_+'_'+_TRD1_\n",
       "    \n",
       "print 'h5_file_name:',h5_file_name\n",
-      "version='2014'\n",
-      "isLP = True # if True, the pulse is a chunk of a longe pulse\n",
-      "\n",
-      "J2eV = 6.24150934e18"
+      "#version='2014'"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def mkdir_p(path):\n",
+      "    \"\"\"\n",
+      "    Create directory tree, if not exists (mkdir -p)\n",
+      "    \"\"\"\n",
+      "    try:\n",
+      "        os.makedirs(path)\n",
+      "    except OSError as exc:  # Python >2.5\n",
+      "        if exc.errno == errno.EEXIST and os.path.isdir(path):\n",
+      "            pass\n",
+      "        else:\n",
+      "            raise"
      ],
      "language": "python",
      "metadata": {},
@@ -308,7 +336,7 @@
       "with h5py.File(os.path.join(datapath,h5_file_name+'.h5'), 'r')  as h5f: # file will be closed when we exit from WITH scope\n",
       "    #h5f.visititems(print_name) # print all strustures names\n",
       "    fast2xydat=h5f['history/parent/detail/misc/FAST2XY_DAT'].value\n",
-      "    if version=='2014.1': \n",
+      "    if not isLP: \n",
       "        fwhm_curve =  h5f['history/parent/detail/misc/fwhm_curve'].value\n",
       "    else:\n",
       "        spot_size = h5f['history/parent/detail/misc/spot_size'].value\n",
@@ -394,7 +422,7 @@
       "K=1.\n",
       "if isLP: \n",
       "    K = 9e-15 # pulse duration for 250 pC bunch charge\n",
-      "if version=='2014':\n",
+      "if isLP:\n",
       "    ax1.plot(gain_curve[:,1]*1e-2,gain_curve[:,2]*K*1e3, '--',label='undlator length')\n",
       "    ax1.grid(True)\n",
       "    ax1.set_xlabel('undulator length z [m]')\n",
@@ -413,7 +441,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if version=='2014.1':\n",
+      "if not isLP:\n",
       "    print fwhm_curve.shape\n",
       "    #@2MY:\n",
       "    #what is where (1st, 2nd,3d,... columns)?\n",
@@ -474,26 +502,18 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import shutil\n",
-      "shutil.copy('report_h5FELsource.ipynb',h5_file_name+'.ipynb')\n",
-      "print os.system(\"/afs/desy.de/group/exfel/software/karabo-trunk/extern/bin/ipython nbconvert \"+h5_file_name+'.ipynb')"
+      "if isIpynb:\n",
+      "    import shutil\n",
+      "    html_dir = out_dir+'/html'\n",
+      "    shutil.rmtree(html_dir) # hack to get around \"global name 'errno' is not defined\" if html_dir exists\n",
+      "    mkdir_p(html_dir)\n",
+      "    out_fname = os.path.join(html_dir,h5_file_name+'.ipynb')\n",
+      "    shutil.copy('report_h5FELsource.ipynb',out_fname)\n",
+      "    os.system('chmod a+rw '+ out_fname)\n",
+      "    os.chdir(html_dir)\n",
+      "    print os.system(\"/afs/desy.de/group/exfel/software/karabo-trunk/extern/bin/ipython nbconvert \"+out_fname)\n",
+      "    os.chdir(work_dir)"
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
