fix issue #6 (import errno)

--- a/report_h5wf_s2e.ipynb
+++ b/report_h5wf_s2e.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b46a6a8caffa7f51923eeb3782562b5e8949f90cf567c39002f81041ed434031"
+  "signature": "sha256:95c4bf7c2ce94634cc16be1e6e965f2edee7a1bd746a1dbffbf25533496661f4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -44,6 +44,7 @@
       "import pylab \n",
       "import numpy \n",
       "import os\n",
+      "import errno\n",
       "\n",
       "sys.path.insert(0,'/data/S2E/packages/WPG')\n",
       "if isXServ:\n",
