clear ipynb output, fix chmod error

--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:b7ed983eade50c1ea4fdfa6f96f8e2ac9c04e4df1c71ef2d50ddde24b12e4f79"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,14 +21,13 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "isS2E = False        # True if working at S2E server\n",
+      "isS2E = True        # True if working at S2E server, make it True before downloading as .py!\n",
       "isIpynb = False       # True if working with iPython notebook\n",
       "if isS2E:\n",
       "    isIpynb = False  # at S2E we only run the python script \n",
@@ -37,16 +37,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Populating the interactive namespace from numpy and matplotlib\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -75,8 +66,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -94,8 +84,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -115,8 +104,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -135,8 +123,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -152,8 +139,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -164,16 +150,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "S1_0.25NM_12GEV_20pC_N1__0000002.h5\n"
-       ]
-      }
-     ],
-     "prompt_number": 8
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -189,8 +166,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -206,8 +182,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -236,8 +211,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 11
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -260,8 +234,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -294,8 +267,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 13
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -321,8 +293,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -388,8 +359,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -444,13 +414,12 @@
       "            print a[idx]\n",
       "    aout=a[0:31]\n",
       "    numpy.savetxt(fast2xydat,aout,fmt='%s')  \n",
-      "    os.system('chmod a+rw '+in_fast2xydat)\n",
+      "    os.system('chmod a+rw '+fast2xydat)\n",
       "    return namg,ifb,nzc"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -483,8 +452,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 17
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -542,8 +510,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 18
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -574,8 +541,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 19
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -645,8 +611,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 20
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -772,8 +737,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 23
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -851,147 +815,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The data will be processed in \n",
-        "/diskmnt/a/lsamoylv/FELsource/2014-05_XFEL_5keV_12GeV_20pC_N1/\n",
-        "All temporary files will be saved in \n",
-        "/diskmnt/a/lsamoylv/FELsource/2014-05_XFEL_5keV_12GeV_20pC_N1/tmp/\n",
-        "==Beforehand==\n",
-        "1. TB: Start time (fs)\n",
-        "6. TE: End time (fs)\n",
-        "100 NXY: Number of xy nodes\n",
-        "1 skip slices (1 - no skip)\n",
-        "1 XXXX\tRun number (Input file name TXXXXYYY.RES)\n",
-        "20 YYY\tPoint of output in z\n",
-        "S1_0.25NM_12GEV_20pC_N1_ file\n",
-        "==Afterwards=="
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "1.5 # TB: Start time (fs)\n",
-        "6.5 # TE: End time (fs)\n",
-        "100 # NXY: Number of xy nodes\n",
-        "7 # skip slices (1 - no skip)\n",
-        "1 # XXXX\tRun number (Input file name TXXXXYYY.RES)\n",
-        "35 # YYY\tPoint of output in z\n",
-        "S1_0.25NM_12GEV_20pC_N1_ # file\n",
-        "namg,ifb,nzc: S1_0.25NM_12GEV_20pC_N1_ 1 35\n",
-        "fulltname: /pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2014-05_XFEL_5keV_12GeV_20pC_N1/S1_0.25NM_12GEV_20pC_N1_T0001035.RES\n",
-        "Create sym link:\n",
-        "Remove sym link:"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "fast2xy.exe:\n",
-        " Searching file S1_0.25NM_12GEV_20pC_N1_T0001035.RES\n",
-        " Reading file header of reference file and allocating arrays \n",
-        " XYMAX:    22.7430952117765     \n",
-        " Input data:\n",
-        " Time step of input data  (fs) =   3.333333333333333E-003\n",
-        " Mesh step (1) of input data (cm) =   1.134920634920635E-004\n",
-        " Mesh step (2) of input data (cm) =   4.044650788387056E-004\n",
-        " Output data:\n",
-        " Time step of output data (fs) =   2.333333333333333E-002   Ratio:            7\n",
-        " Number of nodes:          201\n",
-        " Mesh step (cm) =   4.599393898933689E-004   Ratio:    4.05261280605346     \n",
-        " XYMAX, XYMAX*RNORMR, DXY*RNORMR:    22.7430952117765     \n",
-        "  4.599393898933689E-002  4.599393898933689E-004\n",
-        "   17031884254.9339     \n",
-        " Input file: S1_0.25NM_12GEV_20pC_N1_T0001035.RES\n",
-        " Output file: S1_0.25NM_12GEV_20pC_N1_FXY1_0001035.RES  Nh =            1\n",
-        " Output file: S1_0.25NM_12GEV_20pC_N1_E10001035.RES\n",
-        " Number of slices:          214\n",
-        " Pulse length:    4.99333333333333     \n",
-        " Output file: S1_0.25NM_12GEV_20pC_N1_PXY1_0001035.RES  Nh =            1\n",
-        " CPU time:    6.18006000000000     \n",
-        "\n",
-        "Reading FEL data from:S1_0.25NM_12GEV_20pC_N1_FXY1_0001035.RES ...\n",
-        "...done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "wl [nm], Eph [keV]"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 0.250000002922 4.95999994204\n",
-        "nStart,nEnd:  1 214\n",
-        "nSlices,slMin,slMax [fs]:  214 0.0 4.96999275432\n",
-        "nx,xMin,xMax [um] 201 -459.939008579 459.939008579\n",
-        "y=rows.reshape((nSlices,nx,nx,2)"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " (214, 201, 201, 2)\n",
-        "return swapaxes(y,0,2) (201, 201, 214, 2)\n",
-        "Store wavefront in hdf5 file: S1_0.25NM_12GEV_20pC_N1_035_0000001.h5"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Loading wavefront data from the file:     S1_0.25NM_12GEV_20pC_N1_035_0000001.h5"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Saving the wavefront data with attributes:S1_0.25NM_12GEV_20pC_N1_035_0000001.h5bare.h5"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Replacing data with attributes from  S1_0.25NM_12GEV_20pC_N1_035_0000001.h5bare.h5"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "in_fname,out_fname,prop_in_fname: S1_0.25NM_12GEV_20pC_N1_035_0000001.h5 S1_0.25NM_12GEV_20pC_N1_035_0000001.h5_0000001.h5 FELsource_out_0000001.h5\n",
-        "The result hdf5 file  S1_0.25NM_12GEV_20pC_N1_035_0000001.h5_0000001.h5 will be copied/moved to "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "/diskmnt/a/lsamoylv/sim_data/FELsource/FELsource_out_0000001.h5\n"
-       ]
-      }
-     ],
-     "prompt_number": 21
+     "outputs": []
     },
     {
      "cell_type": "code",
